<resources>
    <string name="app_name">MyPet</string>
    <string name="title_home">Home</string>
    <string name="title_events">Events</string>
    <string name="welcomeText">Hello and welcome to MyPet \n Let\'\s get started</string>
    <string name="create_acc_btn">Create account</string>
    <string name="registration_form_title">Create your account</string>
    <string name="registration_form_email_title">Email</string>
    <string name="registration_form_password_title">Password</string>
    <string name="registration_form_confirm_password">Confirm password</string>
    <string name="registration_form_password_error_text">Minimum eight characters, at least one letter, one number and one special character</string>
    <string name="registration_form_confirm_password_error_text">Passwords do not match</string>
    <string name="pet_form_title">Add your pet information</string>
    <string name="pet_form_name">Name</string>
    <string name="pet_form_gender">Gender</string>
    <string name="pet_form_breed">Breed</string>
    <string name="pet_form_pet_type">Type</string>
    <string name="pet_form_color">Color</string>
    <string name="pet_form_birthday">Birthday</string>
    <string name="pet_form_microchip">Microchip</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="spinner_data_male">Male</string>
    <string name="spinner_data_female">Female</string>
    <string name="date_picker_title">Select dates</string>
    <string name="date_placeholder">DD/MM/YYYY</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="or">- OR -</string>
    <string name="sign_in_later"><u>Sign in later </u></string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="home_title">Home</string>
    <string name="add_event">Add event</string>
    <string name="save">Save</string>
    <string name="reminder">Reminder</string>

</resources>