<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/petEntryForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/petNameLayout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/pet_form_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titlePetForm">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/petName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/titlePetForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/pet_form_title"
            android:textColor="#2196F3"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/petTypeLayout"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/pet_form_pet_type"
            app:layout_constraintEnd_toStartOf="@+id/petBreedLayout"
            app:layout_constraintStart_toStartOf="@+id/petNameLayout"
            app:layout_constraintTop_toBottomOf="@+id/petNameLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/petType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/petBreedLayout"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/pet_form_breed"
            app:layout_constraintEnd_toEndOf="@+id/petNameLayout"
            app:layout_constraintTop_toBottomOf="@+id/petNameLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/petBreed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/petGenderLayout"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/pet_form_gender"
            app:layout_constraintStart_toStartOf="@+id/petTypeLayout"
            app:layout_constraintTop_toBottomOf="@+id/petTypeLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/petGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/petColorLayout"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/pet_form_color"
            app:layout_constraintEnd_toEndOf="@+id/petBreedLayout"
            app:layout_constraintTop_toBottomOf="@+id/petBreedLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/petColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/petBirthdayLayout"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/pet_form_birthday"
            app:layout_constraintStart_toStartOf="@+id/petGenderLayout"
            app:layout_constraintTop_toBottomOf="@+id/petGenderLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/petBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/petMicroChipLayout"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/pet_form_microchip"
            app:layout_constraintEnd_toEndOf="@+id/petColorLayout"
            app:layout_constraintTop_toBottomOf="@+id/petColorLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/petMicrochip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/registrationForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/registration_form_password_title"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@+id/emailLayout"
            app:layout_constraintStart_toStartOf="@+id/emailLayout"
            app:layout_constraintTop_toBottomOf="@+id/emailLayout"
            app:startIconDrawable="@drawable/baseline_password_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/titleRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration_form_title"
            android:textColor="#2196F3"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/emailLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/registration_form_email_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/baseline_email_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPasswordLayout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/registration_form_confirm_password"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@+id/passwordLayout"
            app:layout_constraintStart_toStartOf="@+id/passwordLayout"
            app:layout_constraintTop_toBottomOf="@+id/passwordLayout"
            app:startIconDrawable="@drawable/baseline_password_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBefore"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="15dp"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            app:backgroundTint="#64B5F6"
            app:cornerRadius="28dp"
            app:icon="@drawable/baseline_navigate_before_24"
            app:iconGravity="textStart"
            app:iconPadding="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNext"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            app:backgroundTint="#64B5F6"
            app:cornerRadius="28dp"
            app:icon="@drawable/baseline_navigate_next_24"
            app:iconGravity="textStart"
            app:iconPadding="0dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
